--- a/Datenbank-RPG/Datenbank RPG/Views/Database/Index.cshtml
+++ b/Datenbank-RPG/Datenbank RPG/Views/Database/Index.cshtml
@@ -4,8 +4,79 @@
 @{
     ViewData["Title"] = "Datenbank Rollenspiel!";
 }
+<style>
+    body {
+        background-color: black;
+        color: white;
+    }
 
-<h2>YO WASSUP!!!!!</h2>
+    .genContainer {
+        align-content: center;
+        text-align: center;
+    }
 
-<p>Very Cool! und so.</p>
-<a asp-area="" asp-controller="Database" asp-action="Welcome">Click here to go to the Welcome page</a>
+    .selectionContainer {
+        align-content: center;
+        text-align: center;
+        display: flex;
+        margin: auto;
+        width: 50%;
+    }
+
+    .title {
+        text-align: center;
+        font-family: 'Retro Computer';
+    }
+
+    .btn {
+        color: black;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    .btnContent {
+        color:white;
+    }
+
+    .btn.unclick {
+        color: lightgray;
+    }
+
+    .vp {
+        color: lightgray;
+    }
+
+    a {
+        font-family: 'Retro Computer';
+        color: inherit;
+        text-decoration: none;
+    }
+
+    li {
+        float:left;
+        color: white;
+    }
+
+    ul {
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+    }
+</style>
+
+<body>
+    
+    <div class="selectionContainer">
+        <h2 class="title">Welcome to Idle Traveler!</h2>
+        <br/>
+        <ul>
+            <li class="btn"><div class="btnContent">@Html.ActionLink($"Characters", "Players")</div></li>
+            <li class="btn"><div class="btnContent">|</div></li>
+            <li class="btn"><div class="btnContent">@Html.ActionLink($"Enemies", "Players")</div></li>
+            <li class="btn"><div class="btnContent">|</div></li>
+            <li class="btn"><div class="btnContent">@Html.ActionLink($"Items", "Players")</div></li>
+            <li class="btn"><div class="btnContent">|</div></li>
+            <li class="btn"><div class="btnContent">@Html.ActionLink($"Shop", "Players")</div></li>
+        </ul>
+    </div>
+</body>
